--- a/manifest.json
+++ b/manifest.json
@@ -3,29 +3,69 @@
   "short_name": "ToDayList",
   "description": "Tu gestor de tareas diarias minimalista y eficiente.",
   "start_url": "/",
-  "display": "standalone", // <-- ESTO ES LO IMPORTANTE
-  "background_color": "#f4f7f6",
-  "theme_color": "#e74c3c", // O el color principal de tu app
+  "display": "standalone",
+  "background_color": "#f4f7f6", // Color de fondo para la pantalla de inicio (splash screen)
+  "theme_color": "#e74c3c", // Color de la barra de estado/direcciones del navegador (en modo navegador normal)
   "icons": [
     {
-      "src": "/android-chrome-192x192.png",
+      "src": "/ToDayList-192.png", // Icono principal para tamaños medianos
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/android-chrome-512x512.png",
+      "src": "/ToDayList-512.png", // Icono principal para tamaños grandes
       "sizes": "512x512",
       "type": "image/png"
     },
-     {
-      "src": "/apple-touch-icon.png", // Si tienes un apple-touch-icon específico
-      "sizes": "180x180",
+    {
+       "src": "/favicon-96x96.png", // Un tamaño intermedio común
+       "sizes": "96x96",
+       "type": "image/png"
+    },
+    {
+      "src": "/apple-touch-icon.png", // Icono usado por iOS para añadir a pantalla de inicio
+      "sizes": "180x180", // Tamaño estándar para apple-touch-icon
       "type": "image/png"
-     },
-      {
-      "src": "/favicon.svg",
+    },
+    {
+      "src": "/favicon.svg", // Icono SVG para escalabilidad
       "sizes": "any",
       "type": "image/svg+xml"
+    }
+    // Las imágenes con nombres como web-app-manifest-XXX.png a menudo son redundantes
+    // si ya tienes otras imágenes de 192x192 y 512x512.
+    // Si fueran diferentes o quisieras incluirlas, podrías añadir:
+    /*
+    ,{
+       "src": "/web-app-manifest-192x192.png",
+       "sizes": "192x192",
+       "type": "image/png"
+    },
+    {
+       "src": "/web-app-manifest-512x512.png",
+       "sizes": "512x512",
+       "type": "image/png"
+    }
+    */
+    // Pero con ToDayList-192.png, ToDayList-512.png, favicon-96x96.png, apple-touch-icon.png y favicon.svg
+    // ya tienes buena cobertura de tamaños y tipos.
+  ],
+   "screenshots": [
+     // Opcional pero recomendado para tiendas de apps de PWA (como la de Microsoft Store)
+     // Requiere tener imágenes de capturas de pantalla de tu app en uso
+     /*
+     {
+       "src": "/screenshot-desktop.png", // Ruta a tu captura de pantalla de escritorio
+       "sizes": "1280x800",
+       "type": "image/png",
+       "form_factor": "wide" // Para escritorio
+     },
+     {
+       "src": "/screenshot-mobile.png", // Ruta a tu captura de pantalla de móvil
+       "sizes": "750x1334",
+       "type": "image/png",
+       "form_factor": "narrow" // Para móvil
      }
-  ]
+     */
+   ]
 }
